--- a/app/views/main.html
+++ b/app/views/main.html
@@ -9,7 +9,7 @@
 
 <div class="jumbotron">
   <form name='sign in'>
-    <input type='text'/>
+  <button class='btn btn-primary' ng-click="authenticate()">twitter</button>
   </form>
 </div>
 <div class="footer">
