--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -1,8 +1,9 @@
 <div class='row'>
+	<h1>Authenticate these options</h1>
 	<h2>Your Profile</h2>
 	<img ng-src={{ pic }} alt="pic" class="img-rounded" />
 	<div class='col-mid-6'>
-		<button ng-click='addUser()'class='instagram btn btn-primary'>instagram</button>
+		<button ng-click='auth()'class='instagram btn btn-primary'>instagram</button>
 		<button class='twitter btn btn-primary'>twitter</button>
 	</div>
 </div>
