--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,13 +1,14 @@
 <div class="header">
   <ul class="nav nav-pills pull-right">
     <li class="active"><a ng-href="#">Home</a></li>
-    <li><a ng-href="#/profile">Profile</a></li>
+    <li><a ng-href="/profile">Profile</a></li>
     <li><a ng-href="#">Contact</a></li>
   </ul>
   <h3 class="text-muted">mashup</h3>
 </div>
 
 <div class="jumbotron">
+  <button ng-click='url()' class='btn btn-success'>{{code}}</button>
   <form name='sign in'>
   <button class='btn btn-primary' ng-click="authenticate()">twitter</button>
   </form>
