--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -2,8 +2,8 @@
 	<h1>Authenticate these options</h1>
 	<h2>Your Profile</h2>
 	<img ng-src={{ pic }} alt="pic" class="img-rounded" />
-	<div class='col-mid-6'>
+	<div class='col-mid-6' ng-model='insta'>
 		<button ng-click='auth()'class='instagram btn btn-primary'>instagram</button>
-		<button class='twitter btn btn-primary'>twitter</button>
+		<button class='twitter btn btn-primary' ng-hide>twitter</button>
 	</div>
 </div>
