--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -1,9 +1,6 @@
-<div class='row'>
-	<h1>Authenticate these options</h1>
-	<h2>Your Profile</h2>
-	<img ng-src={{ pic }} alt="pic" class="img-rounded" />
-	<div class='col-mid-6' ng-model='insta'>
-		<button ng-click='auth()'class='instagram btn btn-primary'>instagram</button>
-		<button class='twitter btn btn-primary' ng-hide>twitter</button>
-	</div>
-</div>
+
+<h1 class='whendo-logo'><a class='when' href='#/when'>When</a><span class='do'>Do</span></h1>
+<!-- <div class='col-mid-6' ng-model='insta'>
+	<button ng-click='auth()'class='instagram btn btn-primary'>instagram</button>
+	<button class='twitter btn btn-primary' ng-hide>twitter</button>
+</div> -->
