finsh views, add button to activate and boom!

--- a/app/views/do.html
+++ b/app/views/do.html
@@ -1,11 +1,13 @@
-<h1 class='whendo-logo'><a class='when' href='#'>When</a></h1>
+<h1 class='whendo-logo'><span class='do'>...Do</span></h1>
 <div class="row">
   <div class="col-xs-6 col-md-4 insta icon">
-  	<a href="#/trigger">
-  		<img src="../styles/insta.jpg">
-  	</a>
+  	<img src="../styles/insta.jpg">
   </div>
-  <div class="col-xs-6 col-md-4 tweet icon"><img src="../styles/twitter.jpg"></div>
+  <div class="col-xs-6 col-md-4 tweet icon">
+    <a href="#/dothis">
+      <img src="../styles/twitter.jpg">
+    </a>
+  </div>
   <div class="col-xs-6 col-md-4 phill icon no"><img src="../styles/pinterest.jpg"></div>
 </div>
 <div class="row">
