--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -99,6 +99,7 @@ a.when:hover {
   max-height: 100;
   max-width: 100;
   margin-bottom: 10px;
+  margin-top: 10px;
 }
 .icon:hover{
   opacity: 0.5;
@@ -107,4 +108,23 @@ a.when:hover {
   max-height: 300px;
   max-width: 300px;
   background-image: url('insta.jpg') no-repeat;
+}
+
+.no{
+  opacity: 0.5;
+}
+
+.trigger {
+  width: 300px;
+  height: 400px;
+  background-color: #ecf0f1;
+  margin: 10px;
+  font-size: 2em;
+}
+
+.act {
+  font-size: 6em;
+}
+.form {
+  margin-top: 20px;
 }
